Front/css/brackets.css
html, body, div, span, ol, ul, li, { 
    margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; 
}
body { 
    font-family: 'Roboto', sans-serif;
    line-height: 1; 
}

#container1 {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    position: absolute;
    padding: 10px;
    width: 70%;
    left: 15%;
    top: 15%;
}

[class*="round-"] {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 30px;
    float: left;
    width: 15%;
    /* height: 90%; */
}

[class*="game-"] {
    font-size: 12px;
}

.round-0 [class*="game-"] {
    padding: 15px;
}

.round-1 [class*="game-"] {
    padding: 60px;
}

.round-2 [class*="game-"] {
    padding: 90px;
}

.round-3 [class*="game-"] {
    padding: 120px;
}


[class*="team-"] {
    width: 210px;
    height: 30px;
    line-height: 38px;
    border-radius: 10px;
    font-family: 'Roboto', sans-serif;
    font-size: 12px;
    text-align: center;
    color: #fff;
    background: #333;
}

.btn-t {
    margin-bottom: 3px;
    width: 210px;
    height: 30px;
    line-height: 38px;
    border-radius: 10px;
    font-size: 24px;
    background: #FF5733;
}

.btn-b {
    background: #75FF33;
    border-radius: 10px;
    width: 210px;
    height: 30px;
    line-height: 38px;
    font-size: 24px;
}

